--- a/picMap_fontend/src/style/index.scss
+++ b/picMap_fontend/src/style/index.scss
@@ -4,6 +4,7 @@
   text-align: center;
   overflow: hidden;
   text-overflow: ellipsis;
+  word-break: keep-all;
   background-color: rgba(64, 158, 255, 1);
   color: rgba(255, 255, 255, 1);
   // transition: all 1s;
