Featrue-1.0.0-图片分组定位功能以及节点聚合为簇功能 原因： 1）无 修改： 1）无

--- a/picMap_fontend/src/style/marker.scss
+++ b/picMap_fontend/src/style/marker.scss
@@ -56,6 +56,10 @@ $location-border-color: rgba(200, 0, 0, 1);
   -o-transition: all 0.15s ease;
 }
 
+.leaflet-marker-icon.leaflet-marker-draggable {
+  // 没有过度动画，避免拖拽延迟
+}
+
 // 定位的小尖尖
 // 不知道为什么伪元素很卡，所以单独再添加一个元素
 // .leaflet-marker-icon::after {
